--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@
 AI_BEDTIME_STORY_API_GRADIO_URL="https://jbilcke-hf-ai-bedtime-story-server.hf.space"
 AI_BEDTIME_STORY_API_SECRET_TOKEN=
 
+FAST_IMAGE_SERVER_API_GRADIO_URL="https://jbilcke-hf-fast-image-server.hf.space"
+FAST_IMAGE_SERVER_API_SECRET_TOKEN=
+
 # ----------- CENSORSHIP -------
 ENABLE_CENSORSHIP=
 FINGERPRINT_KEY=
