--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
+    "react-smooth-scroll-hook": "^1.3.4",
     "react-snowfall": "^1.2.1",
     "react-virtualized-auto-sizer": "^1.0.20",
     "replicate": "^0.17.0",
